--- a/index.html
+++ b/index.html
@@ -7,17 +7,76 @@
 </head>
 <body>
   <div class="page">
+    <div class="logo logo_place_header"></div>
     <header class="header">
-
+      <div class="header__title">Learning HOw to Learn</div>
+      <div class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life. <a href="#" class="header__link">Learn more →</a></div>
+      <div class="header__main-illustration">
+        <img src="/images/header-image.png" alt="Person looking off into the distance while standing on a rock">
+      </div>
+      <div class="header__square"></div>
     </header>
     <main class="content">
       <section class="description">
+        <div class="two-columns">
+          <div class="two-columns__brief">The main problem with education</div>
+          <div class="two-columns__main-text">
+            <div class="two-columns__paragraph"></div>
+            <div class="two-columns__paragraph">
+              <span class="two-columns__span-accent"></span></div>
+            <div class="two-columns__paragraph"></div>
+          </div>
+        </div>
       </section>
-
       <section class="digits">
+        <div class="section-title section-title_theme_light">Facts and figures</div>
+        <div class="section-subtitle">On learning and the brain</div>
+        <ul class="table table_theme_light">
+          <li class="table__cell">
+            <h1 class="table__heading">86 billion</h1>
+            <h2 class="table__text">The number of neurons in the human brain</h2>
+          </li>
+          <li class="table__cell">
+            <h1 class="table__heading">73%</h1>
+            <h2 class="table__text">The percentage of adults in the US who consider themselves lifelong learners</h2>
+            <h2 class="table__text">Pew Research Centere</h2>
+          </li>
+          <li class="table__cell">
+            <h1 class="table__heading">1,000 terabytes</h1>
+            <h2 class="table__text">The information storage capacity of a human</h2>
+          </li>
+          <li class="table__cell">
+            <h1 class="table__heading">500 trillion</h1>
+            <h2 class="table__text">The number of nerve synapses responsible for learning in the average adult human</h2>
+          </li>
+          <li class="table__cell">
+            <h1 class="table__heading">420 million</h1>
+            <h2 class="table__text">The number of adults under 25 with insufficient education for finding employment</h2>
+            <h2 class="table__text">World Band, 2017</h2>
+          </li>
+          <li class="table__cell">
+            <h1 class="table__heading">26 years old</h1>
+            <h2 class="table__text">The age at which Alvert Einstein published his groundbreading paper on special relativity</h2>
+          </li>
+          <li class="table__cell">
+            <h1 class="table__heading">1885</h1>
+            <h2 class="table__text">Development of the forgetting curve</h2>
+          </li>
+          <li class="table__cell">
+            <h1 class="table__heading">1897</h1>
+            <h2 class="table__text">Publication of Ivan Pavlov's research on classical conditioning</h2>
+          </li>
+        </ul>
       </section>
-
       <section class="feynman">
+        <img 
+          src="/images/feynman.png" 
+          alt="A picture of Richard Feynman, a world-renowned quantum physicist. The Feynman Technique is derived from his studying methods when he was a student at Princeton." 
+          class="feynman__image"
+        >
+        <div class="feynman__title">The Feynman Technique</div>
+        <div class="feynman__subtitle"></div>
+        <div class="feynman__link"></div>
       </section>
 
       <section class="kaufman">
