--- a/index.html
+++ b/index.html
@@ -29,42 +29,42 @@
         </div>
       </section>
       <section class="digits">
-        <div class="section-title section-title_theme_light">Facts and figures</div>
+        <div class="section-title">Facts and figures</div>
         <div class="section-subtitle">On learning and the brain</div>
-        <ul class="table table_theme_light">
+        <ul class="table">
           <li class="table__cell">
-            <h1 class="table__heading">86 billion</h1>
-            <h2 class="table__text">The number of neurons in the human brain</h2>
+            <div class="table__heading">86 billion</div>
+            <div class="table__text">The number of neurons in the human brain</div>
           </li>
-          <li class="table__cell">
-            <h1 class="table__heading">73%</h1>
-            <h2 class="table__text">The percentage of adults in the US who consider themselves lifelong learners</h2>
-            <h2 class="table__text">Pew Research Centere</h2>
+          <li class="table__cell table__cell_theme_light">
+            <div class="table__heading">73%</div>
+            <div class="table__text">The percentage of adults in the US who consider themselves lifelong learners</div>
+            <div class="table__text">Pew Research Centere</div>
           </li>
-          <li class="table__cell">
-            <h1 class="table__heading">1,000 terabytes</h1>
-            <h2 class="table__text">The information storage capacity of a human</h2>
+          <li class="table__cell table__cell_theme_light">
+            <div class="table__heading">1,000 terabytes</div>
+            <div class="table__text">The information storage capacity of a human</div>
           </li>
-          <li class="table__cell">
-            <h1 class="table__heading">500 trillion</h1>
-            <h2 class="table__text">The number of nerve synapses responsible for learning in the average adult human</h2>
+          <li class="table__cell table__cell_theme_light">
+            <div class="table__heading">500 trillion</div>
+            <div class="table__text">The number of nerve synapses responsible for learning in the average adult human</div>
           </li>
-          <li class="table__cell">
-            <h1 class="table__heading">420 million</h1>
-            <h2 class="table__text">The number of adults under 25 with insufficient education for finding employment</h2>
-            <h2 class="table__text">World Band, 2017</h2>
+          <li class="table__cell table__cell_theme_light">
+            <div class="table__heading">420 million</div>
+            <div class="table__text">The number of adults under 25 with insufficient education for finding employment</div>
+            <div class="table__text">World Band, 2017</div>
           </li>
-          <li class="table__cell">
-            <h1 class="table__heading">26 years old</h1>
-            <h2 class="table__text">The age at which Alvert Einstein published his groundbreading paper on special relativity</h2>
+          <li class="table__cell table__cell_theme_light">
+            <div class="table__heading">26 years old</div>
+            <div class="table__text">The age at which Alvert Einstein published his groundbreading paper on special relativity</div>
           </li>
-          <li class="table__cell">
-            <h1 class="table__heading">1885</h1>
-            <h2 class="table__text">Development of the forgetting curve</h2>
+          <li class="table__cell table__cell_theme_light">
+            <div class="table__heading">1885</div>
+            <div class="table__text">Development of the forgetting curve</div>
           </li>
-          <li class="table__cell">
-            <h1 class="table__heading">1897</h1>
-            <h2 class="table__text">Publication of Ivan Pavlov's research on classical conditioning</h2>
+          <li class="table__cell table__cell_theme_light">
+            <div class="table__heading">1897</div>
+            <div class="table__text">Publication of Ivan Pavlov's research on classical conditioning</div>
           </li>
         </ul>
       </section>
@@ -75,15 +75,103 @@
           class="feynman__image"
         >
         <div class="feynman__title">The Feynman Technique</div>
-        <div class="feynman__subtitle"></div>
-        <div class="feynman__link"></div>
+        <div class="feynman__subtitle">Learn without forgetting</div>
+        <div class="feynman__link">More →</div>
       </section>
-
       <section class="kaufman">
+        <div class="section-title section-title_theme_dark">Ten principles of rapid skill acquisition</div>
+        <div class="section-subtitle section-subtitle_theme_dark">by Josh Kaufman</div>
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">1</div>
+            <div class="table__text table__text_theme_dark">Choose a lovable project</div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">2</div>
+            <div class="table__text table__text_theme_dark">Focus your energy on on skill at a time</div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">3</div>
+            <div class="table__text table__text_theme_dark">Define our target performance level</div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">4</div>
+            <div class="table__text table__text_theme_dark">Deconstruct the skill into sub skills</div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">5</div>
+            <div class="table__text table__text_theme_dark">Obtain critical tools</div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">6</div>
+            <div class="table__text table__text_theme_dark">Eliminate barriers to practice</div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">7</div>
+            <div class="table__text table__text_theme_dark">Make dedicated time for practice</div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">8</div>
+            <div class="table__text table__text_theme_dark">Create fast feedback loops</div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">9</div>
+            <div class="table__text table__text_theme_dark">Practice by the clock in short bursts</div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">10</div>
+            <div class="table__text table__text_theme_dark">Emphasize quantity and speed</div>
+          </li>
+        </ul>
+        <img 
+          class="kaufman__triangle"
+          alt="A big blue triangle, over which Josh Kaufman claims ownership"
+          src="/images/kaufman-triangle.svg"
+        >
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <div class="logo_place_footer"></div>
+          <div class="footer__author">&copy; 2021 Lillian Dennen</div>
+        </div>
+        <div class="footer__column_content_about">
+          <div class="footer__column-heading">About Practicum by Yandex</div>
+          <ul class="footer__list">
+            <li class="footer__column-link">
+              <a href="#">Home page</a>
+            </li>
+            <li class="footer__column-link">
+              <a href="#">Mission</a>
+            </li>
+            <li class="footer__column-link">
+              <a href="#">Professions</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__column_content_social">
+          <div class="footer__column-heading">Social media</div>
+          <ul class="footer__list">
+            <li class="footer__column-link">
+              <img 
+                class="footer__social-icons" 
+                src="/images/facebook_white.svg" 
+                alt="Facebook icon"
+              >
+              Facebook
+            </li>
+            <li class="footer__column-link">
+              <img 
+                class="footer__social-icons" 
+                src="/images/instagram_white.svg" 
+                alt="Instagram icon"
+              >
+              Instagram
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
