--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learning how to learn</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="normalize.css">
 </head>
 <body>
   <div class="page">
@@ -12,7 +14,10 @@
       <div class="header__title">Learning HOw to Learn</div>
       <div class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life. <a href="#" class="header__link">Learn more →</a></div>
       <div class="header__main-illustration">
-        <img src="/images/header-image.png" alt="Person looking off into the distance while standing on a rock">
+        <img
+          src="/images/header-image.png"
+          alt="Epic ponderer stook on a mountaintop deliberating over the finer points of the modern educational system, while also wondering where that giant blue square came from"
+        >
       </div>
       <div class="header__square"></div>
     </header>
@@ -69,9 +74,9 @@
         </ul>
       </section>
       <section class="feynman">
-        <img 
-          src="/images/feynman.png" 
-          alt="A picture of Richard Feynman, a world-renowned quantum physicist. The Feynman Technique is derived from his studying methods when he was a student at Princeton." 
+        <img
+          src="/images/feynman.png"
+          alt="A picture of Richard Feynman, a world-renowned quantum physicist. The Feynman Technique is derived from his studying methods when he was a student at Princeton."
           class="feynman__image"
         >
         <div class="feynman__title">The Feynman Technique</div>
@@ -123,7 +128,7 @@
             <div class="table__text table__text_theme_dark">Emphasize quantity and speed</div>
           </li>
         </ul>
-        <img 
+        <img
           class="kaufman__triangle"
           alt="A big blue triangle, over which Josh Kaufman claims ownership"
           src="/images/kaufman-triangle.svg"
@@ -154,17 +159,17 @@
           <div class="footer__column-heading">Social media</div>
           <ul class="footer__list">
             <li class="footer__column-link">
-              <img 
-                class="footer__social-icons" 
-                src="/images/facebook_white.svg" 
+              <img
+                class="footer__social-icons"
+                src="/images/facebook_white.svg"
                 alt="Facebook icon"
               >
               Facebook
             </li>
             <li class="footer__column-link">
-              <img 
-                class="footer__social-icons" 
-                src="/images/instagram_white.svg" 
+              <img
+                class="footer__social-icons"
+                src="/images/instagram_white.svg"
                 alt="Instagram icon"
               >
               Instagram
