Validate and fix code

--- a/index.html
+++ b/index.html
@@ -34,42 +34,42 @@
         </div>
       </section>
       <section class="digits">
-        <div class="section-title">Facts and figures</div>
-        <div class="section-subtitle">On learning and the brain</div>
+        <h1 class="section-title">Facts and figures</h1>
+        <h2 class="section-subtitle">On learning and the brain</h2>
         <ul class="table">
           <li class="table__cell">
-            <div class="table__heading">86 billion</div>
-            <div class="table__text">The number of neurons in the human brain</div>
+            <h3 class="table__heading">86 billion</h3>
+            <h4 class="table__text">The number of neurons in the human brain</h4>
           </li>
           <li class="table__cell table__cell_theme_light">
-            <div class="table__heading">73%</div>
-            <div class="table__text">The percentage of adults in the US who consider themselves lifelong learners</div>
-            <div class="table__text">Pew Research Centere</div>
+            <h3 class="table__heading">73%</h3>
+            <h4 class="table__text">The percentage of adults in the US who consider themselves lifelong learners</h4>
+            <h4 class="table__text">Pew Research Centere</h4>
           </li>
           <li class="table__cell table__cell_theme_light">
-            <div class="table__heading">1,000 terabytes</div>
-            <div class="table__text">The information storage capacity of a human</div>
+            <h3 class="table__heading">1,000 terabytes</h3>
+            <h4 class="table__text">The information storage capacity of a human</h4>
           </li>
           <li class="table__cell table__cell_theme_light">
-            <div class="table__heading">500 trillion</div>
-            <div class="table__text">The number of nerve synapses responsible for learning in the average adult human</div>
+            <h3 class="table__heading">500 trillion</h3>
+            <h4 class="table__text">The number of nerve synapses responsible for learning in the average adult human</h4>
           </li>
           <li class="table__cell table__cell_theme_light">
-            <div class="table__heading">420 million</div>
-            <div class="table__text">The number of adults under 25 with insufficient education for finding employment</div>
-            <div class="table__text">World Band, 2017</div>
+            <h3 class="table__heading">420 million</h3>
+            <h4 class="table__text">The number of adults under 25 with insufficient education for finding employment</h4>
+            <h4 class="table__text">World Band, 2017</h4>
           </li>
           <li class="table__cell table__cell_theme_light">
-            <div class="table__heading">26 years old</div>
-            <div class="table__text">The age at which Alvert Einstein published his groundbreading paper on special relativity</div>
+            <h3 class="table__heading">26 years old</h3>
+            <h4 class="table__text">The age at which Alvert Einstein published his groundbreading paper on special relativity</h4>
           </li>
           <li class="table__cell table__cell_theme_light">
-            <div class="table__heading">1885</div>
-            <div class="table__text">Development of the forgetting curve</div>
+            <h3 class="table__heading">1885</h3>
+            <h4 class="table__text">Development of the forgetting curve</h4>
           </li>
           <li class="table__cell table__cell_theme_light">
-            <div class="table__heading">1897</div>
-            <div class="table__text">Publication of Ivan Pavlov's research on classical conditioning</div>
+            <h3 class="table__heading">1897</h3>
+            <h4 class="table__text">Publication of Ivan Pavlov's research on classical conditioning</h4>
           </li>
         </ul>
       </section>
@@ -79,53 +79,53 @@
           alt="A picture of Richard Feynman, a world-renowned quantum physicist. The Feynman Technique is derived from his studying methods when he was a student at Princeton."
           class="feynman__image"
         >
-        <div class="feynman__title">The Feynman Technique</div>
-        <div class="feynman__subtitle">Learn without forgetting</div>
+        <h1 class="feynman__title">The Feynman Technique</h1>
+        <h2 class="feynman__subtitle">Learn without forgetting</h2>
         <div class="feynman__link">More →</div>
       </section>
       <section class="kaufman">
-        <div class="section-title section-title_theme_dark">Ten principles of rapid skill acquisition</div>
-        <div class="section-subtitle section-subtitle_theme_dark">by Josh Kaufman</div>
+        <h1 class="section-title section-title_theme_dark">Ten principles of rapid skill acquisition</h1>
+        <h2 class="section-subtitle section-subtitle_theme_dark">by Josh Kaufman</h2>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">1</div>
-            <div class="table__text table__text_theme_dark">Choose a lovable project</div>
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <h4 class="table__text table__text_theme_dark">Choose a lovable project</h4>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">2</div>
-            <div class="table__text table__text_theme_dark">Focus your energy on on skill at a time</div>
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <h4 class="table__text table__text_theme_dark">Focus your energy on on skill at a time</h4>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">3</div>
-            <div class="table__text table__text_theme_dark">Define our target performance level</div>
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <h4 class="table__text table__text_theme_dark">Define our target performance level</h4>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">4</div>
-            <div class="table__text table__text_theme_dark">Deconstruct the skill into sub skills</div>
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <h4 class="table__text table__text_theme_dark">Deconstruct the skill into sub skills</h4>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">5</div>
-            <div class="table__text table__text_theme_dark">Obtain critical tools</div>
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <h4 class="table__text table__text_theme_dark">Obtain critical tools</h4>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">6</div>
-            <div class="table__text table__text_theme_dark">Eliminate barriers to practice</div>
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <h4 class="table__text table__text_theme_dark">Eliminate barriers to practice</h4>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">7</div>
-            <div class="table__text table__text_theme_dark">Make dedicated time for practice</div>
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <h4 class="table__text table__text_theme_dark">Make dedicated time for practice</h4>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">8</div>
-            <div class="table__text table__text_theme_dark">Create fast feedback loops</div>
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <h4 class="table__text table__text_theme_dark">Create fast feedback loops</h4>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">9</div>
-            <div class="table__text table__text_theme_dark">Practice by the clock in short bursts</div>
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <h4 class="table__text table__text_theme_dark">Practice by the clock in short bursts</h4>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">10</div>
-            <div class="table__text table__text_theme_dark">Emphasize quantity and speed</div>
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <h4 class="table__text table__text_theme_dark">Emphasize quantity and speed</h4>
           </li>
         </ul>
         <img
