--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learning how to learn</title>
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="page">
     <div class="logo logo_place_header"></div>
     <header class="header">
-      <div class="header__title">Learning HOw to Learn</div>
-      <div class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life. <a href="#" class="header__link">Learn more →</a></div>
+      <h1 class="header__title">Learning HOw to Learn</h1>
+      <h3 class="header__subtitle">
+        The most effective, cutting-edge learning techniques that you can apply to your daily life. <a href="#" class="header__link">Learn more →</a>
+      </h3>
       <div class="header__main-illustration">
         <img
           src="/images/header-image.png"
@@ -24,57 +26,57 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <div class="two-columns__brief">The main problem with education</div>
+          <p class="two-columns__brief">The main problem with education</p>
           <div class="two-columns__main-text">
-            <h3 class="two-columns__paragraph">
+            <p class="two-columns__paragraph">
               Whether it's at school or university, the one thing no one ever teaches you is how to teach yourself. We often just end up drilling specific exercises and mindlessly memorizing information so that when exam time comes around, we pass the test. But once the test is over, that information has outlived its usefulness, and there's no guarantee that information will be retained. In the end, we're really just learning how to pass our tests.
-            </h3>
-            <h3 class="two-columns__paragraph">
+            </p>
+            <p class="two-columns__paragraph">
               <span class="two-columns__span-accent">Here's the real question:</span>does this approach of repetition and memorization help us truly understand the subject material? The academic consensus nowadays is that it doesn't. In fact, what's more important than any individual topic is knowing how to study, but for some reason, this point is often overlooked. So, what can we do to remedy this?
-            </h3>
-            <h3 class="two-columns__paragraph">
+            </p>
+            <p class="two-columns__paragraph">
               Well, there are various techniques and exercises that can be applied to the educational process to help make it more efficient and engaging. Keep scrolling to uncover some of the secrets of effective learning.
-            </h3>
+            </p>
           </div>
         </div>
       </section>
       <section class="digits">
-        <h1 class="section-title">Facts and figures</h1>
-        <h2 class="section-subtitle">On learning and the brain</h2>
+        <h2 class="section-title">Facts and figures</h2>
+        <h3 class="section-subtitle">On learning and the brain</h3>
         <ul class="table">
           <li class="table__cell">
-            <h3 class="table__heading">86 billion</h3>
-            <h4 class="table__text">The number of neurons in the human brain</h4>
+            <h4 class="table__heading">86 billion</h4>
+            <p class="table__text">The number of neurons in the human brain</p>
           </li>
           <li class="table__cell table__cell_theme_light">
-            <h3 class="table__heading">73%</h3>
-            <h4 class="table__text">The percentage of adults in the US who consider themselves lifelong learners</h4>
-            <h4 class="table__text">Pew Research Centere</h4>
+            <h4 class="table__heading">73%</h4>
+            <p class="table__text">The percentage of adults in the US who consider themselves lifelong learners</p>
+            <p class="table__text">Pew Research Centere</p>
           </li>
           <li class="table__cell table__cell_theme_light">
-            <h3 class="table__heading">1,000 terabytes</h3>
-            <h4 class="table__text">The information storage capacity of a human</h4>
+            <h4 class="table__heading">1,000 terabytes</h4>
+            <p class="table__text">The information storage capacity of a human</p>
           </li>
           <li class="table__cell table__cell_theme_light">
-            <h3 class="table__heading">500 trillion</h3>
-            <h4 class="table__text">The number of nerve synapses responsible for learning in the average adult human</h4>
+            <h4 class="table__heading">500 trillion</h4>
+            <p class="table__text">The number of nerve synapses responsible for learning in the average adult human</p>
           </li>
           <li class="table__cell table__cell_theme_light">
-            <h3 class="table__heading">420 million</h3>
-            <h4 class="table__text">The number of adults under 25 with insufficient education for finding employment</h4>
-            <h4 class="table__text">World Band, 2017</h4>
+            <h4 class="table__heading">420 million</h4>
+            <p class="table__text">The number of adults under 25 with insufficient education for finding employment</p>
+            <p class="table__text">World Band, 2017</p>
           </li>
           <li class="table__cell table__cell_theme_light">
-            <h3 class="table__heading">26 years old</h3>
-            <h4 class="table__text">The age at which Alvert Einstein published his groundbreading paper on special relativity</h4>
+            <h4 class="table__heading">26 years old</h4>
+            <p class="table__text">The age at which Alvert Einstein published his groundbreading paper on special relativity</p>
           </li>
           <li class="table__cell table__cell_theme_light">
-            <h3 class="table__heading">1885</h3>
-            <h4 class="table__text">Development of the forgetting curve</h4>
+            <h4 class="table__heading">1885</h4>
+            <p class="table__text">Development of the forgetting curve</p>
           </li>
           <li class="table__cell table__cell_theme_light">
-            <h3 class="table__heading">1897</h3>
-            <h4 class="table__text">Publication of Ivan Pavlov's research on classical conditioning</h4>
+            <h4 class="table__heading">1897</h4>
+            <p class="table__text">Publication of Ivan Pavlov's research on classical conditioning</p>
           </li>
         </ul>
       </section>
@@ -84,53 +86,53 @@
           alt="A picture of Richard Feynman, a world-renowned quantum physicist. The Feynman Technique is derived from his studying methods when he was a student at Princeton."
           class="feynman__image"
         >
-        <h1 class="feynman__title">The Feynman Technique</h1>
-        <h2 class="feynman__subtitle">Learn without forgetting</h2>
+        <h2 class="feynman__title">The Feynman Technique</h2>
+        <h3 class="feynman__subtitle">Learn without forgetting</h3>
         <div class="feynman__link">More →</div>
       </section>
       <section class="kaufman">
-        <h1 class="section-title section-title_theme_dark">Ten principles of rapid skill acquisition</h1>
-        <h2 class="section-subtitle section-subtitle_theme_dark">by Josh Kaufman</h2>
+        <h2 class="section-title section-title_theme_dark">Ten principles of rapid skill acquisition</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">by Josh Kaufman</h3>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">1</h3>
-            <h4 class="table__text table__text_theme_dark">Choose a lovable project</h4>
+            <h4 class="table__heading table__heading_theme_dark">1</h4>
+            <p class="table__text table__text_theme_dark">Choose a lovable project</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">2</h3>
-            <h4 class="table__text table__text_theme_dark">Focus your energy on on skill at a time</h4>
+            <h4 class="table__heading table__heading_theme_dark">2</h4>
+            <p class="table__text table__text_theme_dark">Focus your energy on on skill at a time</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">3</h3>
-            <h4 class="table__text table__text_theme_dark">Define our target performance level</h4>
+            <h4 class="table__heading table__heading_theme_dark">3</h4>
+            <p class="table__text table__text_theme_dark">Define our target performance level</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">4</h3>
-            <h4 class="table__text table__text_theme_dark">Deconstruct the skill into sub skills</h4>
+            <h4 class="table__heading table__heading_theme_dark">4</h4>
+            <p class="table__text table__text_theme_dark">Deconstruct the skill into sub skills</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">5</h3>
-            <h4 class="table__text table__text_theme_dark">Obtain critical tools</h4>
+            <h4 class="table__heading table__heading_theme_dark">5</h4>
+            <p class="table__text table__text_theme_dark">Obtain critical tools</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">6</h3>
-            <h4 class="table__text table__text_theme_dark">Eliminate barriers to practice</h4>
+            <h4 class="table__heading table__heading_theme_dark">6</h4>
+            <p class="table__text table__text_theme_dark">Eliminate barriers to practice</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">7</h3>
-            <h4 class="table__text table__text_theme_dark">Make dedicated time for practice</h4>
+            <h4 class="table__heading table__heading_theme_dark">7</h4>
+            <p class="table__text table__text_theme_dark">Make dedicated time for practice</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">8</h3>
-            <h4 class="table__text table__text_theme_dark">Create fast feedback loops</h4>
+            <h4 class="table__heading table__heading_theme_dark">8</h4>
+            <p class="table__text table__text_theme_dark">Create fast feedback loops</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">9</h3>
-            <h4 class="table__text table__text_theme_dark">Practice by the clock in short bursts</h4>
+            <h4 class="table__heading table__heading_theme_dark">9</h4>
+            <p class="table__text table__text_theme_dark">Practice by the clock in short bursts</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">10</h3>
-            <h4 class="table__text table__text_theme_dark">Emphasize quantity and speed</h4>
+            <h4 class="table__heading table__heading_theme_dark">10</h4>
+            <p class="table__text table__text_theme_dark">Emphasize quantity and speed</p>
           </li>
         </ul>
         <img
@@ -144,13 +146,13 @@
       <div class="footer__columns">
         <div class="footer__column_content_copyright">
           <div class="logo_place_footer"></div>
-          <div class="footer__author">&copy; 2021 Lillian Dennen</div>
+          <p class="footer__author">&copy; 2021 Lillian Dennen</p>
         </div>
-        <div class="footer__column_content_about">
-          <div class="footer__column-heading">About Practicum by Yandex</div>
+        <nav class="footer__column_content_about">
+          <h3 class="footer__column-heading">About Practicum by Yandex</h3>
           <ul class="footer__list">
             <li class="footer__column-link">
-              <a href="#">Home page</a>
+              <a href="https://practicum.yandex.com">Home page</a>
             </li>
             <li class="footer__column-link">
               <a href="#">Mission</a>
@@ -159,9 +161,9 @@
               <a href="#">Professions</a>
             </li>
           </ul>
-        </div>
-        <div class="footer__column_content_social">
-          <div class="footer__column-heading">Social media</div>
+        </nav>
+        <nav class="footer__column_content_social">
+          <h3 class="footer__column-heading">Social media</h3>
           <ul class="footer__list">
             <li class="footer__column-link">
               <img
@@ -180,7 +182,7 @@
               Instagram
             </li>
           </ul>
-        </div>
+        </nav>
       </div>
     </footer>
   </div>
