--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learning how to learn</title>
-  <link rel="stylesheet" href="normalize.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <div class="page">
-    <div class="logo logo_place_header"></div>
     <header class="header">
-      <h1 class="header__title">Learning HOw to Learn</h1>
+      <div class="logo logo_place_header"></div>
+      <h1 class="header__title">Learning How to Learn</h1>
       <h3 class="header__subtitle">
         The most effective, cutting-edge learning techniques that you can apply to your daily life. <a href="#" class="header__link">Learn more →</a>
       </h3>
       <div class="header__main-illustration">
         <img
-          src="/images/header-image.png"
+          src="./images/header-image.png"
           alt="Epic ponderer stook on a mountaintop deliberating over the finer points of the modern educational system, while also wondering where that giant blue square came from"
         >
       </div>
@@ -32,7 +32,7 @@
               Whether it's at school or university, the one thing no one ever teaches you is how to teach yourself. We often just end up drilling specific exercises and mindlessly memorizing information so that when exam time comes around, we pass the test. But once the test is over, that information has outlived its usefulness, and there's no guarantee that information will be retained. In the end, we're really just learning how to pass our tests.
             </p>
             <p class="two-columns__paragraph">
-              <span class="two-columns__span-accent">Here's the real question:</span>does this approach of repetition and memorization help us truly understand the subject material? The academic consensus nowadays is that it doesn't. In fact, what's more important than any individual topic is knowing how to study, but for some reason, this point is often overlooked. So, what can we do to remedy this?
+              <span class="two-columns__span-accent">Here's the real question:</span> does this approach of repetition and memorization help us truly understand the subject material? The academic consensus nowadays is that it doesn't. In fact, what's more important than any individual topic is knowing how to study, but for some reason, this point is often overlooked. So, what can we do to remedy this?
             </p>
             <p class="two-columns__paragraph">
               Well, there are various techniques and exercises that can be applied to the educational process to help make it more efficient and engaging. Keep scrolling to uncover some of the secrets of effective learning.
@@ -44,7 +44,7 @@
         <h2 class="section-title">Facts and figures</h2>
         <h3 class="section-subtitle">On learning and the brain</h3>
         <ul class="table">
-          <li class="table__cell">
+          <li class="table__cell table__cell_theme_light">
             <h4 class="table__heading">86 billion</h4>
             <p class="table__text">The number of neurons in the human brain</p>
           </li>
@@ -82,7 +82,7 @@
       </section>
       <section class="feynman">
         <img
-          src="/images/feynman.png"
+          src="./images/feynman.png"
           alt="A picture of Richard Feynman, a world-renowned quantum physicist. The Feynman Technique is derived from his studying methods when he was a student at Princeton."
           class="feynman__image"
         >
@@ -138,7 +138,7 @@
         <img
           class="kaufman__triangle"
           alt="A big blue triangle, over which Josh Kaufman claims ownership"
-          src="/images/kaufman-triangle.svg"
+          src="./images/kaufman-triangle.svg"
         >
       </section>
     </main>
@@ -151,35 +151,35 @@
         <nav class="footer__column_content_about">
           <h3 class="footer__column-heading">About Practicum by Yandex</h3>
           <ul class="footer__list">
-            <li class="footer__column-link">
-              <a href="https://practicum.yandex.com">Home page</a>
+            <li>
+              <a class="footer__column-link" href="https://practicum.yandex.com">Home page</a>
             </li>
-            <li class="footer__column-link">
-              <a href="#">Mission</a>
+            <li>
+              <a class="footer__column-link" href="#">Mission</a>
             </li>
-            <li class="footer__column-link">
-              <a href="#">Professions</a>
+            <li>
+              <a class="footer__column-link" href="#">Professions</a>
             </li>
           </ul>
         </nav>
         <nav class="footer__column_content_social">
           <h3 class="footer__column-heading">Social media</h3>
           <ul class="footer__list">
-            <li class="footer__column-link">
+            <li>
               <img
                 class="footer__social-icons"
-                src="/images/facebook_white.svg"
+                src="./images/facebook_white.svg"
                 alt="Facebook icon"
               >
-              Facebook
+              <a class="footer__column-link" href="https://www.facebook.com/YPracticum/">Facebook</a>
             </li>
-            <li class="footer__column-link">
+            <li>
               <img
                 class="footer__social-icons"
-                src="/images/instagram_white.svg"
+                src="./images/instagram_white.svg"
                 alt="Instagram icon"
               >
-              Instagram
+              <a class="footer__column-link" href="https://www.instagram.com/y_practicum/">Instagram</a>
             </li>
           </ul>
         </nav>
