--- a/index.html
+++ b/index.html
@@ -12,21 +12,19 @@
     <header class="header">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Learning How to Learn</h1>
-      <h3 class="header__subtitle">
+      <p class="header__subtitle">
         The most effective, cutting-edge learning techniques that you can apply to your daily life. <a href="#" class="header__link">Learn more →</a>
-      </h3>
-      <div class="header__main-illustration">
-        <img
+      </p>
+      <img
           src="./images/header-image.png"
           alt="Epic ponderer stook on a mountaintop deliberating over the finer points of the modern educational system, while also wondering where that giant blue square came from"
         >
-      </div>
       <div class="header__square"></div>
     </header>
     <main class="content">
       <section class="description">
-        <div class="two-columns">
-          <p class="two-columns__brief">The main problem with education</p>
+        <article class="two-columns">
+          <h2 class="two-columns__brief">The main problem with education</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
               Whether it's at school or university, the one thing no one ever teaches you is how to teach yourself. We often just end up drilling specific exercises and mindlessly memorizing information so that when exam time comes around, we pass the test. But once the test is over, that information has outlived its usefulness, and there's no guarantee that information will be retained. In the end, we're really just learning how to pass our tests.
@@ -38,43 +36,43 @@
               Well, there are various techniques and exercises that can be applied to the educational process to help make it more efficient and engaging. Keep scrolling to uncover some of the secrets of effective learning.
             </p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="digits">
         <h2 class="section-title">Facts and figures</h2>
-        <h3 class="section-subtitle">On learning and the brain</h3>
+        <p class="section-subtitle">On learning and the brain</p>
         <ul class="table">
-          <li class="table__cell table__cell_theme_light">
+          <li class="table__cell">
             <h4 class="table__heading">86 billion</h4>
             <p class="table__text">The number of neurons in the human brain</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
+          <li class="table__cell">
             <h4 class="table__heading">73%</h4>
             <p class="table__text">The percentage of adults in the US who consider themselves lifelong learners</p>
             <p class="table__text">Pew Research Centere</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
+          <li class="table__cell">
             <h4 class="table__heading">1,000 terabytes</h4>
             <p class="table__text">The information storage capacity of a human</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
+          <li class="table__cell">
             <h4 class="table__heading">500 trillion</h4>
             <p class="table__text">The number of nerve synapses responsible for learning in the average adult human</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
+          <li class="table__cell">
             <h4 class="table__heading">420 million</h4>
             <p class="table__text">The number of adults under 25 with insufficient education for finding employment</p>
             <p class="table__text">World Band, 2017</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
+          <li class="table__cell">
             <h4 class="table__heading">26 years old</h4>
             <p class="table__text">The age at which Alvert Einstein published his groundbreading paper on special relativity</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
+          <li class="table__cell">
             <h4 class="table__heading">1885</h4>
             <p class="table__text">Development of the forgetting curve</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
+          <li class="table__cell">
             <h4 class="table__heading">1897</h4>
             <p class="table__text">Publication of Ivan Pavlov's research on classical conditioning</p>
           </li>
@@ -87,12 +85,12 @@
           class="feynman__image"
         >
         <h2 class="feynman__title">The Feynman Technique</h2>
-        <h3 class="feynman__subtitle">Learn without forgetting</h3>
-        <div class="feynman__link">More →</div>
+        <p class="feynman__subtitle">Learn without forgetting</p>
+        <a href="#" class="feynman__link">More →</a>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Ten principles of rapid skill acquisition</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark">by Josh Kaufman</h3>
+        <p class="section-subtitle section-subtitle_theme_dark">by Josh Kaufman</p>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">1</h4>
@@ -144,11 +142,11 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer__columns footer__column_content_copyright">
           <div class="logo_place_footer"></div>
           <p class="footer__author">&copy; 2021 Lillian Dennen</p>
         </div>
-        <nav class="footer__column_content_about">
+        <nav class="footer__columns footer__column_content_about">
           <h3 class="footer__column-heading">About Practicum by Yandex</h3>
           <ul class="footer__list">
             <li>
@@ -162,24 +160,30 @@
             </li>
           </ul>
         </nav>
-        <nav class="footer__column_content_social">
+        <nav class="footer__columns footer__column_content_social">
           <h3 class="footer__column-heading">Social media</h3>
           <ul class="footer__list">
             <li>
-              <img
-                class="footer__social-icons"
-                src="./images/facebook_white.svg"
-                alt="Facebook icon"
-              >
-              <a class="footer__column-link" href="https://www.facebook.com/YPracticum/">Facebook</a>
+              <a
+                class="footer__column-link"
+                href="https://www.facebook.com/YPracticum/">
+                <img
+                  class="footer__social-icons"
+                  src="./images/facebook_white.svg"
+                  alt="Facebook icon"
+                >Facebook
+              </a>
             </li>
             <li>
-              <img
-                class="footer__social-icons"
-                src="./images/instagram_white.svg"
-                alt="Instagram icon"
-              >
-              <a class="footer__column-link" href="https://www.instagram.com/y_practicum/">Instagram</a>
+              <a
+                class="footer__column-link"
+                href="https://www.instagram.com/y_practicum/">
+                <img
+                  class="footer__social-icons"
+                  src="./images/instagram_white.svg"
+                  alt="Instagram icon"
+                >Instagram
+              </a>
             </li>
           </ul>
         </nav>
