--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learning how to learn</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
   <div class="page">
@@ -149,7 +148,7 @@
           <p class="khan__quote-author-subline">Filmmaker</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book-2.png" alt="Book cover of The One World Schoolhouse by Salman Khan">
-            <a href="#" class="khan__buy-link">Buy book →</a>
+            <a href="https://www.amazon.com/One-World-Schoolhouse-Education-Reimagined/dp/1455508373" class="khan__buy-link">Buy book →</a>
           </div>
         </div>
       </section>
@@ -208,16 +207,16 @@
         <h2 class="section-title">Useful resources</h2>
         <p class="section-subtitle">Further materials on learning techniques and hacks.</p>
         <nav class="resources__logo-zone">
-          <a href="#">
+          <a href="https://ed.ted.com/">
             <img class="resources__logo" src="./images/logo/resources-tedED.png" alt="TEDEd logo">
           </a>
-          <a href="#">
+          <a href="https://medium.com/">
             <img class="resources__logo" src="./images/logo/resources-Medium.png" alt="Medium logo">
           </a>
-          <a href="#">
+          <a href="https://www.dezeen.com/">
             <img class="resources__logo" src="./images/logo/resources-dezeen.png" alt="dezeen logo">
           </a>
-          <a href="#">
+          <a href="https://www.goodreads.com/">
             <img class="resources__logo" src="./images/logo/resources-goodreads.png" alt="goodreads logo">
           </a>
         </nav>
